<resources>
    <string name="app_name">LittleHelper</string>
    <string name="channel_name">Standard Channel</string>
    <string name="channel_description">Channel for all Notifications from LittleHelper</string>
    <string name="channel_id">Standard LittleHelper Channel</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_general">General</string>

    <string name="pref_header_apps">Apps</string>
    <string name="pref_apps_description">Control app specific enabling for notification-reading</string>

    <string name="pref_header_profiles">App specific profiles</string>
    <string name="pref_profiles_description">Create and edit profiles for the apps on which notification reading is enabled</string>

    <!-- General settings -->

    <string name="pref_category_run">Run configuration</string>

    <string name="pref_always_on">Always On</string>
    <string name="pref_always_on_description">Notifications will always be read out, this overrides any Profile settings</string>

    <string name="pref_headphones_on">Headphones</string>
    <string name="pref_headphones_on_description">Notifications will be read out when headphones are plugged in</string>

    <string name="pref_headset_on">Headset</string>
    <string name="pref_headset_on_description">Notifications will be read out when a headset is plugged in</string>

    <string name="pref_bluetooth_on">Bluetooth Headset</string>
    <string name="pref_bluetooth_on_description">Notifications will be read out when a specified Bluetooth Headset is connected</string>

    <string name="pref_wifi_on">Wi-Fi</string>
    <string name="pref_wifi_on_description">Notifications will be read out when connected to a specified Wi-Fi</string>

    <string name="pref_only_screen_off">Screen off</string>
    <string name="pref_only_screen_off_description">Notifications will only be read out if the screen is off</string>

    <string name="pref_use_general">General</string>
    <string name="pref_use_general_description">Use the general preferences instead</string>

    <string name="key_cat_devices">key_cat_devices</string>
    <string name="pref_category_devices">Device Specific</string>

    <string name="pref_bluetooth_devices">Specify Bluetooth Devices</string>

    <string name="pref_wifi_devices">Specify Wi-Fi Devices</string>

    <string name="pref_category_special">Special</string>

    <string name="pref_check_replica">Check for Replica</string>
    <string name="pref_check_replica_description">Check whether a notification is a replica of the last one and if so ignore it</string>

    <string name="pref_log_description">Log the notifications for apps where LittleHelper is activated</string>
    <string name="pref_log">Log Notifications</string>

    <!-- App Settings -->
    <string name="key_defaultTrue_title">Default value</string>

    <string name="key_general_description">General settings which are used if not defined else</string>

    <string name="key_defaultTrue_description">Default value for unrecognized Apps is True</string>

    <string name="key_allOn_description">Switch all on</string>

    <string name="key_allOff_description">Switch all off</string>

    <!-- App Profiles -->

    <string name="pref_blacklist_words_title">Blacklisted Words in notification title</string>
    <string name="pref_blacklist_words_title_description">If one of these words occur in a notification-title, it won\'t be read out. Separate words by comma</string>

    <string name="pref_blacklist_words_text">Blacklisted Words in notification text</string>
    <string name="pref_blacklist_words_text_description">If one of these words occur in a notification-text, it won\'t be read out. Separate words by comma</string>

    <!-- Strings for Main Activity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_child">ChildActivity</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="status">Status:</string>
    <string name="fix_btn">Fix It</string>
    <string name="start_btn">Start Listener</string>
    <string name="kill_btn">Kill Listener</string>
    <string name="version">1.0</string>
    <string name="pref_category_logs">Logs</string>
    <string name="del_btn">Delete all Logfiles</string>
    <string name="package_hint">The package to view the log for</string>
    <string name="view_log">Show Log</string>
    <string name="nologs_warning">No Logs to show yet.\nMaybe you deactivated it in the settings...</string>

</resources>
