<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="ifRoom" />
    <item
        android:title="@string/del_btn"
        android:id="@+id/action_delete_logs"
        app:showAsAction="never" />
    <item
        android:title="@string/start_btn"
        android:id="@+id/action_start_listener"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_kill_listener"
        app:showAsAction="never"
        android:title="@string/kill_btn" />
    <item
        android:id="@+id/action_open_settings"
        app:showAsAction="never"
        android:title="@string/fix_btn" />

</menu>